Improve the styles of the 2nd most important in the 2nd level

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -112,6 +112,21 @@ $tags-container-color: #2aaae2;
   ant-article-summary{
     padding-top: 1% !important;
   }
+
+  .article-summary-body{
+    min-height: 16em !important;
+    max-height: 16em !important;
+    overflow: hidden;
+    line-height: 1em;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    display: block;
+  
+    p {
+      margin-bottom: .03em !important;
+      text-align: justify;
+    }
+  }
 }
 
 .extra-articles {
