Show the total amount of comments instead of the approved ones

--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.html
@@ -30,6 +30,6 @@
 
   <div fxLayout="row" fxLayoutAlign="right center" class="metadata-item">
     <mat-icon class="metadata-icon" aria-label="comments">comment</mat-icon>
-    <span class="metadata-text">{{ article?.approvedCommentCount }}</span>
+    <span class="metadata-text">{{ article?.amountOfComments }}</span>
   </div>
 </section>
