Add basic html to the modal content

--- a/apps/havana500-webclient/src/app/features/age-modal/age-modal.component.html
+++ b/apps/havana500-webclient/src/app/features/age-modal/age-modal.component.html
@@ -1,3 +1,11 @@
-<p>
-  age-modal works!
-</p>
+<div class="modal-outer-container">
+  <div class="modal-header">
+    Confirme la edad
+  </div>
+  <div class="modal-body">
+    Tiene que ser mayor de edad
+  </div>
+  <div class="modal-body">
+    <button type="button" class="btn" (click)="accept()"></button>
+  </div>
+</div>
