--- a/apps/havana500-webclient/src/app/features/age-modal/age-modal.component.html
+++ b/apps/havana500-webclient/src/app/features/age-modal/age-modal.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn" (click)="accept()">{{buttonText}}</button>
+    <button type="button" class="btn" (click)="accept()" [disabled]="!isValidAge">{{buttonText}}</button>
   </div>
 </div>
