--- a/apps/havana500-admin/src/app/features/user-management/list-users/list-users.component.html
+++ b/apps/havana500-admin/src/app/features/user-management/list-users/list-users.component.html
@@ -1,3 +1,104 @@
-<p>
-  list-users works!
-</p>
+<div id="articles" class="page-layout carded fullwidth articles-home-padded">
+
+  <!-- TOP BACKGROUND -->
+  <div class="top-bg mat-accent-bg"></div>
+  <!-- / TOP BACKGROUND -->
+
+  <!-- CENTER -->
+  <div class="center">
+
+      <!-- HEADER -->
+      <div class="header white-fg" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
+          fxLayoutAlign.gt-xs="space-around center">
+
+          <!-- APP TITLE -->
+          <div class="logo my-12 m-sm-0" fxLayout="row" fxLayoutAlign="start center">
+              <mat-icon class="logo-icon mr-16" *antIfOnDom [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">shopping_basket</mat-icon>
+              <span class="logo-text h1" *antIfOnDom [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">Usuarios del sistema</span>
+          </div>
+          <!-- / APP TITLE -->
+
+          <!-- SEARCH -->
+          <div *hidden class="search-input-wrapper mx-12 m-md-0" fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
+              <label for="search" class="mr-8">
+                  <mat-icon class="secondary-text">search</mat-icon>
+              </label>
+              <mat-form-field floatPlaceholder="never" fxFlex="1 0 auto">
+                  <input id="search" matInput #filter placeholder="Search">
+              </mat-form-field>
+          </div>
+          <!-- / SEARCH -->
+      </div>
+      <!-- / HEADER -->
+
+      <!-- CONTENT CARD -->
+      <div class="content-card mat-white-bg">
+
+          <mat-table class="users-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}">
+
+
+              <!-- ID Column -->
+              <ng-container matColumnDef="username">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de usuario</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.username}}</p>
+                  </mat-cell>
+              </ng-container>
+
+
+              <ng-container matColumnDef="firstname">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.firstname}}</p>
+                  </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="lastname">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Apellido</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.lastname}}</p>
+                  </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="email">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.email}}</p>
+                  </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="phonenumber">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>phonenumber</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.phonenumber}}</p>
+                  </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="emailconfirmed">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>emailconfirmed</mat-header-cell>
+                  <mat-cell *matCellDef="let user">
+                      <p class="text-truncate">{{user.emailconfirmed}}</p>
+                  </mat-cell>
+              </ng-container>
+
+             
+
+
+
+              <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+
+              <mat-row *matRowDef="let user; columns: columnsToDisplay;" class="user" matRipple>
+              </mat-row>
+
+          </mat-table>
+
+          <mat-paginator #paginator [length]="dataSource.currentLength" [pageIndex]="0" [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 25, 100]">
+
+          </mat-paginator>
+
+      </div>
+      <!-- / CONTENT CARD -->
+  </div>
+  <!-- / CENTER -->
+</div>
