--- a/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.html
+++ b/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.html
@@ -83,7 +83,7 @@
           >
           <mat-cell *matCellDef="let marketing">
             <p class="text-truncate">
-              {{ pictureTypes[marketing.pictureType.toString()] }}
+              {{ getPictureType(marketing.pictureType) }}
             </p>
           </mat-cell>
         </ng-container>
