Change the name of the marketing home to Imagenes

--- a/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.html
+++ b/apps/havana500-admin/src/app/features/marketing/smart/marketing-home.component.html
@@ -29,7 +29,7 @@
           class="logo-text h1"
           *antIfOnDom
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
-          >Marketing</span
+          >Imágenes</span
         >
       </div>
       <!-- / APP TITLE -->
