--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
@@ -13,9 +13,11 @@
     <!-- / HEADER -->
   
   <ngx-masonry id="gallery-grid-container">
-    <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages">
+    <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages" (click)="openGallery(i)">
         <div class="gallery-img-container" >
             <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
           </div>
    </ngxMasonryItem>
   </ngx-masonry>
+
+  <ngx-image-gallery [images]="imageForPlugin"></ngx-image-gallery>
