Add functionalities to load more pictures

--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.scss
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.scss
@@ -78,6 +78,7 @@ $tags-container-color: #2aaae2;
   width: 92%;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 5%;
 
   .gallery-img-container {
     position: relative;
