--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
@@ -1,23 +1,29 @@
 <div fxLayout="column" fxLayoutAlign="start start" class="second-level">
-    <!-- HEADER -->
-    <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
-      <!-- TITLE -->
-  
-      <!-- /TITLE -->
-      <div id="tags-outer-container" class="mat-accent-500-bg">
-        <div id="section-name-container">
-          <h1 class="section-name" translate>{{ sectionName }}</h1>
-        </div>
+  <!-- HEADER -->
+  <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+    <!-- TITLE -->
+
+    <!-- /TITLE -->
+    <div id="tags-outer-container" class="mat-accent-500-bg">
+      <div id="section-name-container">
+        <h1 class="section-name" translate>{{ sectionName }}</h1>
       </div>
     </div>
-    <!-- / HEADER -->
-  
-  <ngx-masonry id="gallery-grid-container">
-    <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages" (click)="openGallery(i)">
-        <div class="gallery-img-container" >
-            <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
-          </div>
-   </ngxMasonryItem>
-  </ngx-masonry>
+  </div>
+  <!-- / HEADER -->
 
+    <ngx-masonry id="gallery-grid-container">
+      <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages" (click)="openGallery(i)">
+        <div class="gallery-img-container">
+          <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
+        </div>
+      </ngxMasonryItem>
+    </ngx-masonry>
   <ngx-image-gallery [images]="imageForPlugin"></ngx-image-gallery>
+
+
+  <div class="more-elements-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
+    <button class="btn" (click)="loadMoreImages()">
+      <span translate>SEE_MORE</span>
+    </button>
+  </div>
