--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
@@ -12,7 +12,7 @@
   </div>
   <!-- / HEADER -->
 
-    <ngx-masonry id="gallery-grid-container">
+  <ngx-masonry [options]="masonryOptions" id="gallery-grid-container">
       <ngxMasonryItem class="masonry-item" *ngFor="let img of galleryImages" (click)="openGallery(i)">
         <div class="gallery-img-container">
           <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
@@ -21,6 +21,19 @@
     </ngx-masonry>
   <ngx-image-gallery [images]="imageForPlugin"></ngx-image-gallery>
 
+  <!-- <ng-masonry-grid [masonryOptions]="{ transitionDuration: '0.8s', gutter: 5 }" [useAnimation]="true"
+    [scrollAnimationOptions]="{ animationEffect: 'effect-4', minDuration : 0.4, maxDuration : 0.7 }">
+    <ng-masonry-grid-item id="{{'masonry-item-'+i}}" *ngFor="let img of galleryImages; let i = index;" (click)="openGallery(i)">
+      <mat-card class="example-card">            
+        <div class="gallery-img-container">
+          <img src="{{img.relativePath}}" alt="{{img.seoFileName}}" layout-fill>
+        </div>
+        <mat-card-content>
+          <label>Item Number: {{item.count + 1}}</label>
+        </mat-card-content>
+      </mat-card>
+    </ng-masonry-grid-item>
+  </ng-masonry-grid> -->
 
   <div class="more-elements-btn-container" [ngClass]="{ 'hide-more-btn': isEndOfPage }">
     <button class="btn" (click)="loadMoreImages()">
