--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.scss
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.scss
@@ -75,17 +75,33 @@ $tags-container-color: #2aaae2;
 }
 
 #gallery-grid-container {
-  width: 92%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 5%;
+  // width: 92%;
+  // margin-right: auto;
+  // margin-left: auto;
+  // margin-bottom: 5%;
+  // display: grid;
+  // grid-auto-rows: minmax(28rem, auto);
+  // grid-template-columns: repeat( 4, minmax(250px, 1fr) );
+  column-width: 40em;
+	column-gap: 10px;
+  width: 95%;
+	// max-width: 1500x;
+	margin: auto;
 
-  .gallery-img-container {
-    position: relative;
+  .grid-item {
+    background: #fefefe;
+    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+    margin-bottom: 10px;
+    display: inline-block;
+    cursor: pointer;
+    :hover {
+      opacity: .9;
+      transition: opacity .4s ease-in-out;
+    }
 
     img {
       width: 100%;
-      max-width: 60vh;
+      // max-width: 60vh;
       height: auto;
       display: inline-block;
     }
