Remove the header from the Gallery

--- a/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
+++ b/apps/havana500-webclient/src/app/features/gallery/gallery.component.html
@@ -1,19 +1,11 @@
-<script>
-  console.log('Hello from the HTML');
-
-</script>
-<div fxLayout="column" fxLayoutAlign="start start" class="second-level">
   <!-- HEADER -->
-  <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
-    <!-- TITLE -->
-
-    <!-- /TITLE -->
+  <!-- <div id="secondary-header" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
     <div id="tags-outer-container" class="mat-accent-500-bg">
       <div id="section-name-container">
-        <h1 class="section-name" translate>{{ sectionName }}</h1>
+        <h1 class="section-name" [innerHTML]="'GALLERY' | translate"></h1>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- / HEADER -->
 
   <!-- <ngx-masonry [options]="masonryOptions" id="gallery-grid-container">
