Fix the bug with transition in the general articles
Now it doesn't has any animation, just show and hide the
articles

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -12,7 +12,7 @@
       class="article-container top-article-container"
       fxFlex="1 1 100%"
       fxFlexAlign="center"
-      [@fadeInOut]="i === (currentIndex$ | async) ? 'visible' : 'invisible'"
+      [hidden]="i !== (currentIndex$ | async)"
       *ngFor="let article of (topArticles$ | async); let i = index"
     >
       <ant-article-summary
