Add pointer cursor to the btn of the images

--- a/libs/shared/src/lib/scss/ant.scss
+++ b/libs/shared/src/lib/scss/ant.scss
@@ -51,3 +51,11 @@ $more-elemtents-container-color: #2aaae2;
 .hide-more-btn {
   display: none;
 }
+
+.previous-arrow {
+  cursor: pointer;
+}
+
+.next-arrow {
+  cursor: pointer;
+}
